# serializer version: 1
# name: test_passport_short_series_fallback
  dict({
    'error': 'Недостаточно данных (нужно > 30 точек)',
  })
# ---
# name: test_passport_v1_0_snapshot
  dict({
    'autocorrelation': dict({
      'is_ok': False,
      'is_white_noise': False,
      'value': 0.0,
    }),
    'basic_stats': dict({
      'max': 159.0053212364,
      'mean': 124.474780386,
      'min': 87.8624973983,
      'n': 110,
      'std': 18.1378057517,
    }),
    'correlations': dict({
    }),
    'determinism': dict({
      'is_deterministic': False,
      'slope': 0.4436550701,
      'value': 0.6087736173,
    }),
    'fft': dict({
      'count': 2,
      'dominant_periods': list([
        12.2222222222,
        110.0,
      ]),
    }),
    'freq': dict({
      'is_ok': True,
      'value': 'MS',
    }),
    'hurst': dict({
      'type': 'anti_persistent',
      'value': -0.009956938,
    }),
    'normality': dict({
      'is_normal': True,
      'is_ok': True,
      'value': 0.2172651084,
    }),
    'periodogram': dict({
      'count': 3,
      'periods': list([
        2.2916666667,
        2.75,
        6.1111111111,
      ]),
    }),
    'seasonal_periods': dict({
      'count': 1,
      'periods': list([
        20,
      ]),
    }),
    'seasonality': dict({
      'is_seasonal': True,
      'strength': 0.7717409228,
    }),
    'stationarity': dict({
      'is_ok': False,
      'is_stationary': False,
      'value': 0.9749742704,
    }),
    'trend': dict({
      'direction': 'up',
      'slope': 0.4436550701,
    }),
    'wavelet': dict({
      'count': 1,
      'scales': list([
        10,
      ]),
    }),
  })
# ---
# name: test_passport_with_covariates_snapshot
  dict({
    'autocorrelation': dict({
      'is_ok': False,
      'is_white_noise': False,
      'value': 0.0,
    }),
    'basic_stats': dict({
      'max': 159.0053212364,
      'mean': 124.474780386,
      'min': 87.8624973983,
      'n': 110,
      'std': 18.1378057517,
    }),
    'correlations': dict({
      'max_abs_corr': 0.964254809,
      'top3': dict({
        'covariate_1': 0.964254809,
        'covariate_2': 0.1196574255,
      }),
    }),
    'determinism': dict({
      'is_deterministic': False,
      'slope': 0.4436550701,
      'value': 0.6087736173,
    }),
    'fft': dict({
      'count': 2,
      'dominant_periods': list([
        12.2222222222,
        110.0,
      ]),
    }),
    'freq': dict({
      'is_ok': True,
      'value': 'MS',
    }),
    'hurst': dict({
      'type': 'anti_persistent',
      'value': -0.009956938,
    }),
    'normality': dict({
      'is_normal': True,
      'is_ok': True,
      'value': 0.2172651084,
    }),
    'periodogram': dict({
      'count': 3,
      'periods': list([
        2.2916666667,
        2.75,
        6.1111111111,
      ]),
    }),
    'seasonal_periods': dict({
      'count': 1,
      'periods': list([
        20,
      ]),
    }),
    'seasonality': dict({
      'is_seasonal': True,
      'strength': 0.7717409228,
    }),
    'stationarity': dict({
      'is_ok': False,
      'is_stationary': False,
      'value': 0.9749742704,
    }),
    'trend': dict({
      'direction': 'up',
      'slope': 0.4436550701,
    }),
    'wavelet': dict({
      'count': 1,
      'scales': list([
        10,
      ]),
    }),
  })
# ---
